--- a/app/src/main/res/layout/adapter_live_tv.xml
+++ b/app/src/main/res/layout/adapter_live_tv.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout android:paddingLeft="@dimen/padding_left_26dp" android:paddingRight="@dimen/padding_right_26dp" android:paddingBottom="@dimen/padding_bottom_30dp" android:layout_width="fill_parent" android:layout_height="fill_parent"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <ImageView android:id="@id/img_content" android:layout_width="fill_parent" android:layout_height="@dimen/height_174dp" android:src="@mipmap/ic_launcher" android:scaleType="centerCrop" />
+  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv">
+    <com.android.volley.toolbox.NetworkImageView android:id="@id/img_content" android:layout_width="fill_parent" android:layout_height="@dimen/height_174dp" android:src="@mipmap/ic_launcher" android:scaleType="centerCrop" />
 </FrameLayout>
