--- a/app/src/main/res/layout/fragment_program_review.xml
+++ b/app/src/main/res/layout/fragment_program_review.xml
@@ -4,7 +4,7 @@
     <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
         <ProgressBar android:id="@id/loading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" />
         <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/height_480dp">
-            <ImageView android:id="@id/img_content" android:layout_width="fill_parent" android:layout_height="@dimen/height_480dp" android:scaleType="centerCrop" />
+            <com.android.volley.toolbox.NetworkImageView android:id="@id/img_content" android:layout_width="fill_parent" android:layout_height="@dimen/height_480dp" android:scaleType="centerCrop" />
             <ImageView android:id="@id/degradasi2" android:layout_width="fill_parent" android:layout_height="@dimen/height_480dp" android:src="@mipmap/gradasi" android:scaleType="fitXY" />
             <FrameLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/height_480dp">
                 <ImageView android:layout_gravity="center" android:visibility="gone" android:layout_width="@dimen/width_46dp" android:layout_height="@dimen/height_46dp" android:src="@mipmap/play_mini" />
@@ -19,18 +19,8 @@
         </RelativeLayout>
         <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
             <LinearLayout android:padding="@dimen/padding_18dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
-                <Button android:textSize="@dimen/btn_sign_in_txt_size" android:textColor="@color/white_color" android:id="@id/btn_review" android:background="@drawable/sign_in_bg" android:layout_width="fill_parent" android:layout_height="@dimen/height_48dp" android:text="@string/write_Review" android:textAllCaps="false" />
+                <Button android:textSize="@dimen/btn_sign_in_txt_size" android:textColor="@color/white_color" android:id="@id/btn_review" android:background="@drawable/sign_in_bg" android:layout_width="fill_parent" android:layout_height="@dimen/height_48dp" android:text="@string/download" android:textAllCaps="false" />
             </LinearLayout>
-            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="@dimen/padding_8dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
-                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/lyt_Review" android:layout_width="wrap_content" android:layout_height="wrap_content">
-                    <TextView android:textSize="@dimen/txt_sinopsis_size" android:textStyle="bold" android:textColor="@color/white_color" android:id="@id/txt_review" android:paddingLeft="@dimen/padding_left_15dp" android:paddingTop="@dimen/padding_top_10dp" android:paddingRight="@dimen/padding_right_8dp" android:paddingBottom="@dimen/padding_bottom_10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/review" />
-                    <ImageView android:layout_width="@dimen/width_20dp" android:layout_height="@dimen/height_20dp" android:src="@mipmap/ico_dropdown" />
-                </LinearLayout>
-                <TextView android:textSize="@dimen/txt_sinopsis_size" android:textStyle="bold" android:textColor="@color/txt_sinopsis_color" android:gravity="right" android:id="@id/txt_count_review" android:paddingLeft="@dimen/padding_left_15dp" android:paddingTop="@dimen/padding_top_10dp" android:paddingRight="@dimen/padding_right_8dp" android:paddingBottom="@dimen/padding_bottom_10dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/count_review" android:layout_weight="1.0" />
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout android:orientation="vertical" android:padding="@dimen/padding_10dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
-            <android.support.v7.widget.RecyclerView android:id="@id/recyclerview_list_review" android:background="@color/bg_recycler_list_Review" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/height_480dp" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
