--- a/app/src/main/res/layout/activity_watch_movie.xml
+++ b/app/src/main/res/layout/activity_watch_movie.xml
@@ -9,23 +9,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_watch_movie"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
     tools:context="net.winnerawan.layarkaca.activity.WatchMovieActivity">
 
-    <FrameLayout
-        android:id="@+id/movie_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
 
         <com.github.rtoshiro.view.video.FullscreenVideoLayout
             app:uvv_autoRotation="true"
             app:uvv_fitXY="false"
             android:id="@+id/movie_view"
+            android:keepScreenOn="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" />
 
-    </FrameLayout>
 
     <LinearLayout android:id="@+id/lyt_buff" android:gravity="left" android:orientation="vertical" android:background="@color/bg_Detail_video" android:paddingLeft="@dimen/padding_left_23dp" android:paddingTop="@dimen/padding_top_10dp" android:paddingRight="@dimen/padding_right_30dp" android:paddingBottom="@dimen/padding_bottom_8dp" android:layout_width="@dimen/width_233dp" android:layout_height="wrap_content"
         android:layout_centerVertical="true"
